modify implied funding rate calculation

--- a/tables/corr_BTC.tex
+++ b/tables/corr_BTC.tex
@@ -1,12 +1,12 @@
 \begin{tabular}{@{}l*{9}{R{9.8mm}}@{}}
  & Binance & Bybit & OKX & Huobi & Gate & Bitget & dYdX & CoinEx & {\bf Contango} \\
-Binance & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.39 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FF8686}} \color[HTML]{F1F1F1} 0.94 & {\cellcolor[HTML]{FFDBDB}} \color[HTML]{000000} 0.29 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.03 \\
-Bybit & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.39 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FFC8C8}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFE0E0}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFE8E8}} \color[HTML]{000000} 0.17 & {\cellcolor[HTML]{FCFCFF}} \color[HTML]{000000} -0.03 \\
-OKX & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFCBCB}} \color[HTML]{000000} 0.41 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFECEC}} \color[HTML]{000000} 0.14 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.00 \\
-Huobi & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{FFF4F4}} \color[HTML]{000000} 0.09 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FAFAFF}} \color[HTML]{000000} -0.04 \\
-Gate & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FFC8C8}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{FFF4F4}} \color[HTML]{000000} 0.09 & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{FAFAFF}} \color[HTML]{000000} -0.04 \\
-Bitget & {\cellcolor[HTML]{FF8686}} \color[HTML]{F1F1F1} 0.94 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFCBCB}} \color[HTML]{000000} 0.41 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.27 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 & {\cellcolor[HTML]{FFFBFB}} \color[HTML]{000000} 0.03 \\
-dYdX & {\cellcolor[HTML]{FFDBDB}} \color[HTML]{000000} 0.29 & {\cellcolor[HTML]{FFE0E0}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFF4F4}} \color[HTML]{000000} 0.09 & {\cellcolor[HTML]{FFF4F4}} \color[HTML]{000000} 0.09 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.27 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.08 & {\cellcolor[HTML]{FFEAEA}} \color[HTML]{000000} 0.17 \\
-CoinEx & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FFE8E8}} \color[HTML]{000000} 0.17 & {\cellcolor[HTML]{FFECEC}} \color[HTML]{000000} 0.14 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.08 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFFAFA}} \color[HTML]{000000} 0.04 \\
-{\bf Contango} & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.03 & {\cellcolor[HTML]{FCFCFF}} \color[HTML]{000000} -0.03 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.00 & {\cellcolor[HTML]{FAFAFF}} \color[HTML]{000000} -0.04 & {\cellcolor[HTML]{FAFAFF}} \color[HTML]{000000} -0.04 & {\cellcolor[HTML]{FFFBFB}} \color[HTML]{000000} 0.03 & {\cellcolor[HTML]{FFEAEA}} \color[HTML]{000000} 0.17 & {\cellcolor[HTML]{FFFAFA}} \color[HTML]{000000} 0.04 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 \\
+Binance & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.39 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FF8686}} \color[HTML]{F1F1F1} 0.94 & {\cellcolor[HTML]{FFDBDB}} \color[HTML]{000000} 0.29 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 \\
+Bybit & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.39 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FFC8C8}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFE0E0}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFE8E8}} \color[HTML]{000000} 0.17 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.01 \\
+OKX & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFCBCB}} \color[HTML]{000000} 0.41 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFECEC}} \color[HTML]{000000} 0.14 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.01 \\
+Huobi & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{FFF4F4}} \color[HTML]{000000} 0.09 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 \\
+Gate & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FFC8C8}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{FFF4F4}} \color[HTML]{000000} 0.09 & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.00 \\
+Bitget & {\cellcolor[HTML]{FF8686}} \color[HTML]{F1F1F1} 0.94 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFCBCB}} \color[HTML]{000000} 0.41 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.27 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 \\
+dYdX & {\cellcolor[HTML]{FFDBDB}} \color[HTML]{000000} 0.29 & {\cellcolor[HTML]{FFE0E0}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFF4F4}} \color[HTML]{000000} 0.09 & {\cellcolor[HTML]{FFF4F4}} \color[HTML]{000000} 0.09 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.27 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.08 & {\cellcolor[HTML]{FFF0F0}} \color[HTML]{000000} 0.12 \\
+CoinEx & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FFE8E8}} \color[HTML]{000000} 0.17 & {\cellcolor[HTML]{FFECEC}} \color[HTML]{000000} 0.14 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.08 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.10 \\
+{\bf Contango} & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.01 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.01 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.00 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 & {\cellcolor[HTML]{FFF0F0}} \color[HTML]{000000} 0.12 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.10 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 \\
 \end{tabular}
