--- a/tables/corr_MKR.tex
+++ b/tables/corr_MKR.tex
@@ -1,12 +1,12 @@
 \begin{tabular}{@{}l*{9}{R{9.8mm}}@{}}
  & Binance & Bybit & OKX & Huobi & Gate & Bitget & dYdX & CoinEx & {\bf Contango} \\
-Binance & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 & {\cellcolor[HTML]{FFD4D4}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 0.99 & {\cellcolor[HTML]{FFE3E3}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFD4D4}} \color[HTML]{000000} 0.34 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 \\
-Bybit & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.50 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFE4E4}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 \\
+Binance & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 & {\cellcolor[HTML]{FFD4D4}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 0.99 & {\cellcolor[HTML]{FFE3E3}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFD4D4}} \color[HTML]{000000} 0.34 & {\cellcolor[HTML]{FCFCFF}} \color[HTML]{000000} -0.03 \\
+Bybit & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.50 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFE4E4}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 \\
 OKX & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 & {\cellcolor[HTML]{FFDADA}} \color[HTML]{000000} 0.29 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFE6E6}} \color[HTML]{000000} 0.19 & {\cellcolor[HTML]{FFD3D3}} \color[HTML]{000000} 0.34 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 \\
-Huobi & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 & {\cellcolor[HTML]{FFFAFA}} \color[HTML]{000000} 0.04 & {\cellcolor[HTML]{F8F8FF}} \color[HTML]{000000} -0.06 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 \\
-Gate & {\cellcolor[HTML]{FFD4D4}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FFDADA}} \color[HTML]{000000} 0.29 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.10 & {\cellcolor[HTML]{FFE0E0}} \color[HTML]{000000} 0.24 & {\cellcolor[HTML]{FFF0F0}} \color[HTML]{000000} 0.11 \\
-Bitget & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 0.99 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.50 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFFAFA}} \color[HTML]{000000} 0.04 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFE3E3}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFD4D4}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 \\
-dYdX & {\cellcolor[HTML]{FFE3E3}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFE6E6}} \color[HTML]{000000} 0.19 & {\cellcolor[HTML]{F8F8FF}} \color[HTML]{000000} -0.06 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.10 & {\cellcolor[HTML]{FFE3E3}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 & {\cellcolor[HTML]{FFFAFA}} \color[HTML]{000000} 0.04 \\
-CoinEx & {\cellcolor[HTML]{FFD4D4}} \color[HTML]{000000} 0.34 & {\cellcolor[HTML]{FFE4E4}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFD3D3}} \color[HTML]{000000} 0.34 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FFE0E0}} \color[HTML]{000000} 0.24 & {\cellcolor[HTML]{FFD4D4}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 \\
-{\bf Contango} & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FFF0F0}} \color[HTML]{000000} 0.11 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FFFAFA}} \color[HTML]{000000} 0.04 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 \\
+Huobi & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 & {\cellcolor[HTML]{FFFAFA}} \color[HTML]{000000} 0.04 & {\cellcolor[HTML]{F8F8FF}} \color[HTML]{000000} -0.06 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 \\
+Gate & {\cellcolor[HTML]{FFD4D4}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FFDADA}} \color[HTML]{000000} 0.29 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.10 & {\cellcolor[HTML]{FFE0E0}} \color[HTML]{000000} 0.24 & {\cellcolor[HTML]{FFE6E6}} \color[HTML]{000000} 0.19 \\
+Bitget & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 0.99 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.50 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.37 & {\cellcolor[HTML]{FFFAFA}} \color[HTML]{000000} 0.04 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFE3E3}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFD4D4}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FCFCFF}} \color[HTML]{000000} -0.02 \\
+dYdX & {\cellcolor[HTML]{FFE3E3}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFDCDC}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFE6E6}} \color[HTML]{000000} 0.19 & {\cellcolor[HTML]{F8F8FF}} \color[HTML]{000000} -0.06 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.10 & {\cellcolor[HTML]{FFE3E3}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 & {\cellcolor[HTML]{F8F8FF}} \color[HTML]{000000} -0.06 \\
+CoinEx & {\cellcolor[HTML]{FFD4D4}} \color[HTML]{000000} 0.34 & {\cellcolor[HTML]{FFE4E4}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFD3D3}} \color[HTML]{000000} 0.34 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FFE0E0}} \color[HTML]{000000} 0.24 & {\cellcolor[HTML]{FFD4D4}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFF4F4}} \color[HTML]{000000} 0.09 \\
+{\bf Contango} & {\cellcolor[HTML]{FCFCFF}} \color[HTML]{000000} -0.03 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.05 & {\cellcolor[HTML]{FFE6E6}} \color[HTML]{000000} 0.19 & {\cellcolor[HTML]{FCFCFF}} \color[HTML]{000000} -0.02 & {\cellcolor[HTML]{F8F8FF}} \color[HTML]{000000} -0.06 & {\cellcolor[HTML]{FFF4F4}} \color[HTML]{000000} 0.09 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 \\
 \end{tabular}
