--- a/tables/corr_CRV.tex
+++ b/tables/corr_CRV.tex
@@ -1,12 +1,12 @@
 \begin{tabular}{@{}l*{9}{R{9.8mm}}@{}}
  & Binance & Bybit & OKX & Huobi & Gate & Bitget & dYdX & CoinEx & {\bf Contango} \\
-Binance & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9E9E}} \color[HTML]{000000} 0.76 & {\cellcolor[HTML]{FFA3A3}} \color[HTML]{000000} 0.72 & {\cellcolor[HTML]{FFA2A2}} \color[HTML]{000000} 0.73 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.56 & {\cellcolor[HTML]{F0F0FF}} \color[HTML]{000000} -0.12 \\
-Bybit & {\cellcolor[HTML]{FF9E9E}} \color[HTML]{000000} 0.76 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFA4A4}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FF9B9B}} \color[HTML]{000000} 0.78 & {\cellcolor[HTML]{FF9E9E}} \color[HTML]{000000} 0.76 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.52 & {\cellcolor[HTML]{ECECFF}} \color[HTML]{000000} -0.15 \\
-OKX & {\cellcolor[HTML]{FFA3A3}} \color[HTML]{000000} 0.72 & {\cellcolor[HTML]{FFA4A4}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFA3A3}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FF9B9B}} \color[HTML]{000000} 0.79 & {\cellcolor[HTML]{FFA3A3}} \color[HTML]{000000} 0.72 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFB0B0}} \color[HTML]{000000} 0.61 & {\cellcolor[HTML]{F8F8FF}} \color[HTML]{000000} -0.05 \\
-Huobi & {\cellcolor[HTML]{FFA2A2}} \color[HTML]{000000} 0.73 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FFA3A3}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9090}} \color[HTML]{000000} 0.87 & {\cellcolor[HTML]{FFA2A2}} \color[HTML]{000000} 0.73 & {\cellcolor[HTML]{FFC3C3}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{F6F6FF}} \color[HTML]{000000} -0.07 \\
-Gate & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FF9B9B}} \color[HTML]{000000} 0.78 & {\cellcolor[HTML]{FF9B9B}} \color[HTML]{000000} 0.79 & {\cellcolor[HTML]{FF9090}} \color[HTML]{000000} 0.87 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FFC3C3}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{FFB4B4}} \color[HTML]{000000} 0.58 & {\cellcolor[HTML]{F6F6FF}} \color[HTML]{000000} -0.07 \\
-Bitget & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9E9E}} \color[HTML]{000000} 0.76 & {\cellcolor[HTML]{FFA3A3}} \color[HTML]{000000} 0.72 & {\cellcolor[HTML]{FFA2A2}} \color[HTML]{000000} 0.73 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.56 & {\cellcolor[HTML]{F0F0FF}} \color[HTML]{000000} -0.11 \\
-dYdX & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFC3C3}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{FFC3C3}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{E6E6FF}} \color[HTML]{000000} -0.19 \\
-CoinEx & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.56 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.52 & {\cellcolor[HTML]{FFB0B0}} \color[HTML]{000000} 0.61 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{FFB4B4}} \color[HTML]{000000} 0.58 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.56 & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 \\
-{\bf Contango} & {\cellcolor[HTML]{F0F0FF}} \color[HTML]{000000} -0.12 & {\cellcolor[HTML]{ECECFF}} \color[HTML]{000000} -0.15 & {\cellcolor[HTML]{F8F8FF}} \color[HTML]{000000} -0.05 & {\cellcolor[HTML]{F6F6FF}} \color[HTML]{000000} -0.07 & {\cellcolor[HTML]{F6F6FF}} \color[HTML]{000000} -0.07 & {\cellcolor[HTML]{F0F0FF}} \color[HTML]{000000} -0.11 & {\cellcolor[HTML]{E6E6FF}} \color[HTML]{000000} -0.19 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 \\
+Binance & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9E9E}} \color[HTML]{000000} 0.76 & {\cellcolor[HTML]{FFA3A3}} \color[HTML]{000000} 0.72 & {\cellcolor[HTML]{FFA2A2}} \color[HTML]{000000} 0.73 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.56 & {\cellcolor[HTML]{F6F6FF}} \color[HTML]{000000} -0.07 \\
+Bybit & {\cellcolor[HTML]{FF9E9E}} \color[HTML]{000000} 0.76 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFA4A4}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FF9B9B}} \color[HTML]{000000} 0.78 & {\cellcolor[HTML]{FF9E9E}} \color[HTML]{000000} 0.76 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.52 & {\cellcolor[HTML]{FFFAFA}} \color[HTML]{000000} 0.04 \\
+OKX & {\cellcolor[HTML]{FFA3A3}} \color[HTML]{000000} 0.72 & {\cellcolor[HTML]{FFA4A4}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFA3A3}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FF9B9B}} \color[HTML]{000000} 0.79 & {\cellcolor[HTML]{FFA3A3}} \color[HTML]{000000} 0.72 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFB0B0}} \color[HTML]{000000} 0.61 & {\cellcolor[HTML]{F6F6FF}} \color[HTML]{000000} -0.07 \\
+Huobi & {\cellcolor[HTML]{FFA2A2}} \color[HTML]{000000} 0.73 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FFA3A3}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9090}} \color[HTML]{000000} 0.87 & {\cellcolor[HTML]{FFA2A2}} \color[HTML]{000000} 0.73 & {\cellcolor[HTML]{FFC3C3}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{FFFAFA}} \color[HTML]{000000} 0.04 \\
+Gate & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FF9B9B}} \color[HTML]{000000} 0.78 & {\cellcolor[HTML]{FF9B9B}} \color[HTML]{000000} 0.79 & {\cellcolor[HTML]{FF9090}} \color[HTML]{000000} 0.87 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FFC3C3}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{FFB4B4}} \color[HTML]{000000} 0.58 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 \\
+Bitget & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9E9E}} \color[HTML]{000000} 0.76 & {\cellcolor[HTML]{FFA3A3}} \color[HTML]{000000} 0.72 & {\cellcolor[HTML]{FFA2A2}} \color[HTML]{000000} 0.73 & {\cellcolor[HTML]{FF9C9C}} \color[HTML]{000000} 0.77 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.56 & {\cellcolor[HTML]{F6F6FF}} \color[HTML]{000000} -0.06 \\
+dYdX & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFC3C3}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{FFC3C3}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{FFB2B2}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{F4F4FF}} \color[HTML]{000000} -0.08 \\
+CoinEx & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.56 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.52 & {\cellcolor[HTML]{FFB0B0}} \color[HTML]{000000} 0.61 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{FFB4B4}} \color[HTML]{000000} 0.58 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.56 & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 \\
+{\bf Contango} & {\cellcolor[HTML]{F6F6FF}} \color[HTML]{000000} -0.07 & {\cellcolor[HTML]{FFFAFA}} \color[HTML]{000000} 0.04 & {\cellcolor[HTML]{F6F6FF}} \color[HTML]{000000} -0.07 & {\cellcolor[HTML]{FFFAFA}} \color[HTML]{000000} 0.04 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{F6F6FF}} \color[HTML]{000000} -0.06 & {\cellcolor[HTML]{F4F4FF}} \color[HTML]{000000} -0.08 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.02 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 \\
 \end{tabular}
