--- a/tables/corr_LINK.tex
+++ b/tables/corr_LINK.tex
@@ -1,12 +1,12 @@
 \begin{tabular}{@{}l*{9}{R{9.8mm}}@{}}
  & Binance & Bybit & OKX & Huobi & Gate & Bitget & dYdX & CoinEx & {\bf Contango} \\
-Binance & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.45 & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FF8282}} \color[HTML]{F1F1F1} 0.98 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.01 \\
-Bybit & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.45 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFCBCB}} \color[HTML]{000000} 0.41 & {\cellcolor[HTML]{FFDEDE}} \color[HTML]{000000} 0.26 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.45 & {\cellcolor[HTML]{FFC8C8}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.30 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.00 \\
-OKX & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{FFCBCB}} \color[HTML]{000000} 0.41 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFF0F0}} \color[HTML]{000000} 0.12 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{FCFCFF}} \color[HTML]{000000} -0.03 \\
+Binance & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.45 & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FF8282}} \color[HTML]{F1F1F1} 0.98 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{FCFCFF}} \color[HTML]{000000} -0.02 \\
+Bybit & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.45 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFCBCB}} \color[HTML]{000000} 0.41 & {\cellcolor[HTML]{FFDEDE}} \color[HTML]{000000} 0.26 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.45 & {\cellcolor[HTML]{FFC8C8}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.30 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.01 \\
+OKX & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{FFCBCB}} \color[HTML]{000000} 0.41 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFF0F0}} \color[HTML]{000000} 0.12 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{FBFBFF}} \color[HTML]{000000} -0.04 \\
 Huobi & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 & {\cellcolor[HTML]{FFDEDE}} \color[HTML]{000000} 0.26 & {\cellcolor[HTML]{FFF0F0}} \color[HTML]{000000} 0.12 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFE8E8}} \color[HTML]{000000} 0.18 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FFF0F0}} \color[HTML]{000000} 0.12 & {\cellcolor[HTML]{FFF4F4}} \color[HTML]{000000} 0.09 \\
 Gate & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.45 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.33 & {\cellcolor[HTML]{FFE8E8}} \color[HTML]{000000} 0.18 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.22 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.45 & {\cellcolor[HTML]{FAFAFF}} \color[HTML]{000000} -0.04 \\
 Bitget & {\cellcolor[HTML]{FF8282}} \color[HTML]{F1F1F1} 0.98 & {\cellcolor[HTML]{FFC8C8}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FFDBDB}} \color[HTML]{000000} 0.29 & {\cellcolor[HTML]{FCFCFF}} \color[HTML]{000000} -0.02 \\
-dYdX & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.30 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.22 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFE3E3}} \color[HTML]{000000} 0.22 & {\cellcolor[HTML]{FFFAFA}} \color[HTML]{000000} 0.04 \\
+dYdX & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.30 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.22 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFE3E3}} \color[HTML]{000000} 0.22 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.03 \\
 CoinEx & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.31 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{FFF0F0}} \color[HTML]{000000} 0.12 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.45 & {\cellcolor[HTML]{FFDBDB}} \color[HTML]{000000} 0.29 & {\cellcolor[HTML]{FFE3E3}} \color[HTML]{000000} 0.22 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{F8F8FF}} \color[HTML]{000000} -0.06 \\
-{\bf Contango} & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.01 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.00 & {\cellcolor[HTML]{FCFCFF}} \color[HTML]{000000} -0.03 & {\cellcolor[HTML]{FFF4F4}} \color[HTML]{000000} 0.09 & {\cellcolor[HTML]{FAFAFF}} \color[HTML]{000000} -0.04 & {\cellcolor[HTML]{FCFCFF}} \color[HTML]{000000} -0.02 & {\cellcolor[HTML]{FFFAFA}} \color[HTML]{000000} 0.04 & {\cellcolor[HTML]{F8F8FF}} \color[HTML]{000000} -0.06 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 \\
+{\bf Contango} & {\cellcolor[HTML]{FCFCFF}} \color[HTML]{000000} -0.02 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.01 & {\cellcolor[HTML]{FBFBFF}} \color[HTML]{000000} -0.04 & {\cellcolor[HTML]{FFF4F4}} \color[HTML]{000000} 0.09 & {\cellcolor[HTML]{FAFAFF}} \color[HTML]{000000} -0.04 & {\cellcolor[HTML]{FCFCFF}} \color[HTML]{000000} -0.02 & {\cellcolor[HTML]{FFFCFC}} \color[HTML]{000000} 0.03 & {\cellcolor[HTML]{F8F8FF}} \color[HTML]{000000} -0.06 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 \\
 \end{tabular}
