replace contago name

--- a/tables/corr_ETH.tex
+++ b/tables/corr_ETH.tex
@@ -1,5 +1,5 @@
 \begin{tabular}{@{}l*{9}{R{9.8mm}}@{}}
- & Binance & Bybit & OKX & Huobi & Gate & Bitget & dYdX & CoinEx & {\bf Contango} \\
+ & Binance & Bybit & OKX & Huobi & Gate & Bitget & dYdX & CoinEx & {\bf DeFi Loan} \\
 Binance & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{FFE6E6}} \color[HTML]{000000} 0.19 & {\cellcolor[HTML]{FFE3E3}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FF8A8A}} \color[HTML]{000000} 0.92 & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FFF4F4}} \color[HTML]{000000} 0.09 & {\cellcolor[HTML]{EEEEFF}} \color[HTML]{000000} -0.13 \\
 Bybit & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.53 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.30 & {\cellcolor[HTML]{FFE4E4}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFE8E8}} \color[HTML]{000000} 0.18 & {\cellcolor[HTML]{FFC2C2}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.30 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{ECECFF}} \color[HTML]{000000} -0.15 \\
 OKX & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.38 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.30 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFCECE}} \color[HTML]{000000} 0.39 & {\cellcolor[HTML]{FFBABA}} \color[HTML]{000000} 0.54 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.11 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FFFBFB}} \color[HTML]{000000} 0.03 \\
@@ -8,5 +8,5 @@ Gate & {\cellcolor[HTML]{FFE3E3}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{
 Bitget & {\cellcolor[HTML]{FF8A8A}} \color[HTML]{000000} 0.92 & {\cellcolor[HTML]{FFC2C2}} \color[HTML]{000000} 0.48 & {\cellcolor[HTML]{FFD0D0}} \color[HTML]{000000} 0.36 & {\cellcolor[HTML]{FFE4E4}} \color[HTML]{000000} 0.21 & {\cellcolor[HTML]{FFE2E2}} \color[HTML]{000000} 0.23 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.11 & {\cellcolor[HTML]{F2F2FF}} \color[HTML]{000000} -0.10 \\
 dYdX & {\cellcolor[HTML]{FFD2D2}} \color[HTML]{000000} 0.35 & {\cellcolor[HTML]{FFD8D8}} \color[HTML]{000000} 0.30 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.11 & {\cellcolor[HTML]{FFF8F8}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FEFEFF}} \color[HTML]{000000} -0.01 & {\cellcolor[HTML]{FFD6D6}} \color[HTML]{000000} 0.32 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{E3E3FF}} \color[HTML]{000000} -0.22 \\
 CoinEx & {\cellcolor[HTML]{FFF4F4}} \color[HTML]{000000} 0.09 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.06 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FFD4D4}} \color[HTML]{000000} 0.34 & {\cellcolor[HTML]{FFC3C3}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.11 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.01 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFE0E0}} \color[HTML]{000000} 0.24 \\
-{\bf Contango} & {\cellcolor[HTML]{EEEEFF}} \color[HTML]{000000} -0.13 & {\cellcolor[HTML]{ECECFF}} \color[HTML]{000000} -0.15 & {\cellcolor[HTML]{FFFBFB}} \color[HTML]{000000} 0.03 & {\cellcolor[HTML]{FFECEC}} \color[HTML]{000000} 0.15 & {\cellcolor[HTML]{FFE3E3}} \color[HTML]{000000} 0.22 & {\cellcolor[HTML]{F2F2FF}} \color[HTML]{000000} -0.10 & {\cellcolor[HTML]{E3E3FF}} \color[HTML]{000000} -0.22 & {\cellcolor[HTML]{FFE0E0}} \color[HTML]{000000} 0.24 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 \\
+{\bf DeFi Loan} & {\cellcolor[HTML]{EEEEFF}} \color[HTML]{000000} -0.13 & {\cellcolor[HTML]{ECECFF}} \color[HTML]{000000} -0.15 & {\cellcolor[HTML]{FFFBFB}} \color[HTML]{000000} 0.03 & {\cellcolor[HTML]{FFECEC}} \color[HTML]{000000} 0.15 & {\cellcolor[HTML]{FFE3E3}} \color[HTML]{000000} 0.22 & {\cellcolor[HTML]{F2F2FF}} \color[HTML]{000000} -0.10 & {\cellcolor[HTML]{E3E3FF}} \color[HTML]{000000} -0.22 & {\cellcolor[HTML]{FFE0E0}} \color[HTML]{000000} 0.24 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 \\
 \end{tabular}
