--- a/tables/corr_SNX.tex
+++ b/tables/corr_SNX.tex
@@ -1,5 +1,5 @@
 \begin{tabular}{@{}l*{9}{R{9.8mm}}@{}}
- & Binance & Bybit & OKX & Huobi & Gate & Bitget & dYdX & CoinEx & {\bf Contango} \\
+ & Binance & Bybit & OKX & Huobi & Gate & Bitget & dYdX & CoinEx & {\bf DeFi Loan} \\
 Binance & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9292}} \color[HTML]{000000} 0.85 & {\cellcolor[HTML]{FFA4A4}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{FFA6A6}} \color[HTML]{000000} 0.70 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFB3B3}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FFB4B4}} \color[HTML]{000000} 0.58 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.10 \\
 Bybit & {\cellcolor[HTML]{FF9292}} \color[HTML]{000000} 0.85 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFA0A0}} \color[HTML]{000000} 0.74 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFAEAE}} \color[HTML]{000000} 0.64 & {\cellcolor[HTML]{FF9292}} \color[HTML]{000000} 0.85 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.57 & {\cellcolor[HTML]{FFAEAE}} \color[HTML]{000000} 0.63 & {\cellcolor[HTML]{FFF0F0}} \color[HTML]{000000} 0.11 \\
 OKX & {\cellcolor[HTML]{FFA4A4}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FFA0A0}} \color[HTML]{000000} 0.74 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFCACA}} \color[HTML]{000000} 0.41 & {\cellcolor[HTML]{FFBCBC}} \color[HTML]{000000} 0.52 & {\cellcolor[HTML]{FFA4A4}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FFBEBE}} \color[HTML]{000000} 0.51 & {\cellcolor[HTML]{FFACAC}} \color[HTML]{000000} 0.65 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 \\
@@ -8,5 +8,5 @@ Gate & {\cellcolor[HTML]{FFA6A6}} \color[HTML]{000000} 0.70 & {\cellcolor[HTML]{
 Bitget & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FF9292}} \color[HTML]{000000} 0.85 & {\cellcolor[HTML]{FFA4A4}} \color[HTML]{000000} 0.71 & {\cellcolor[HTML]{FFC6C6}} \color[HTML]{000000} 0.44 & {\cellcolor[HTML]{FFA6A6}} \color[HTML]{000000} 0.70 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFB3B3}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.58 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.10 \\
 dYdX & {\cellcolor[HTML]{FFB3B3}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.57 & {\cellcolor[HTML]{FFBEBE}} \color[HTML]{000000} 0.51 & {\cellcolor[HTML]{FFDBDB}} \color[HTML]{000000} 0.28 & {\cellcolor[HTML]{FFC0C0}} \color[HTML]{000000} 0.49 & {\cellcolor[HTML]{FFB3B3}} \color[HTML]{000000} 0.59 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.11 \\
 CoinEx & {\cellcolor[HTML]{FFB4B4}} \color[HTML]{000000} 0.58 & {\cellcolor[HTML]{FFAEAE}} \color[HTML]{000000} 0.63 & {\cellcolor[HTML]{FFACAC}} \color[HTML]{000000} 0.65 & {\cellcolor[HTML]{FFC8C8}} \color[HTML]{000000} 0.43 & {\cellcolor[HTML]{FFC3C3}} \color[HTML]{000000} 0.46 & {\cellcolor[HTML]{FFB6B6}} \color[HTML]{000000} 0.58 & {\cellcolor[HTML]{FFCCCC}} \color[HTML]{000000} 0.40 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.11 \\
-{\bf Contango} & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.10 & {\cellcolor[HTML]{FFF0F0}} \color[HTML]{000000} 0.11 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 & {\cellcolor[HTML]{FCFCFF}} \color[HTML]{000000} -0.02 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.02 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.10 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.11 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.11 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 \\
+{\bf DeFi Loan} & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.10 & {\cellcolor[HTML]{FFF0F0}} \color[HTML]{000000} 0.11 & {\cellcolor[HTML]{FFF6F6}} \color[HTML]{000000} 0.07 & {\cellcolor[HTML]{FCFCFF}} \color[HTML]{000000} -0.02 & {\cellcolor[HTML]{FFFEFE}} \color[HTML]{000000} 0.02 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.10 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.11 & {\cellcolor[HTML]{FFF2F2}} \color[HTML]{000000} 0.11 & {\cellcolor[HTML]{FF8080}} \color[HTML]{F1F1F1} 1.00 \\
 \end{tabular}
