--- a/tables/funding_rates_BTC.tex
+++ b/tables/funding_rates_BTC.tex
@@ -3,7 +3,7 @@
 \toprule
  & std & mean & min & 25\% & 50\% & 75\% & max & count \\
 \midrule
-{\bf Contango} & \databar{0.0026} & $0.0036$ & $-0.0011$ & $0.0023$ & $0.0028$ & $0.0038$ & $0.0255$ & 540 \\
+DeFi Loan & \databar{0.0026} & $0.0036$ & $-0.0011$ & $0.0023$ & $0.0028$ & $0.0038$ & $0.0255$ & 540 \\
 Binance & \databar{0.0043} & $0.0049$ & $-0.0109$ & $0.0021$ & $0.0049$ & $0.0096$ & $0.0100$ & 540 \\
 Bybit & \databar{0.0044} & $0.0059$ & $-0.0086$ & $0.0024$ & $0.0071$ & $0.0100$ & $0.0100$ & 540 \\
 Bitget & \databar{0.0046} & $0.0050$ & $-0.0103$ & $0.0021$ & $0.0054$ & $0.0093$ & $0.0109$ & 540 \\
