--- a/tables/funding_rates_ETH.tex
+++ b/tables/funding_rates_ETH.tex
@@ -6,7 +6,7 @@
 Binance & \databar{0.0045} & $0.0045$ & $-0.0177$ & $0.0014$ & $0.0046$ & $0.0087$ & $0.0100$ & 540 \\
 Bybit & \databar{0.0050} & $0.0054$ & $-0.0126$ & $0.0018$ & $0.0067$ & $0.0100$ & $0.0100$ & 540 \\
 Bitget & \databar{0.0051} & $0.0044$ & $-0.0177$ & $0.0017$ & $0.0048$ & $0.0090$ & $0.0109$ & 540 \\
-{\bf Contango} & \databar{0.0058} & $0.0027$ & $-0.0245$ & $0.0003$ & $0.0017$ & $0.0043$ & $0.0284$ & 540 \\
+DeFi Loan & \databar{0.0058} & $0.0027$ & $-0.0245$ & $0.0003$ & $0.0017$ & $0.0043$ & $0.0284$ & 540 \\
 Gate & \databar{0.0059} & $0.0021$ & $-0.0221$ & $-0.0020$ & $0.0027$ & $0.0069$ & $0.0100$ & 540 \\
 OKX & \databar{0.0079} & $0.0035$ & $-0.0500$ & $-0.0012$ & $0.0033$ & $0.0083$ & $0.0274$ & 540 \\
 Huobi & \databar{0.0088} & $0.0070$ & $-0.0346$ & $0.0044$ & $0.0100$ & $0.0100$ & $0.0959$ & 540 \\
