--- a/tables/funding_rates_MKR.tex
+++ b/tables/funding_rates_MKR.tex
@@ -6,7 +6,7 @@
 Huobi & \databar{0.0023} & $0.0097$ & $-0.0143$ & $0.0100$ & $0.0100$ & $0.0100$ & $0.0100$ & 540 \\
 Binance & \databar{0.0041} & $0.0082$ & $-0.0249$ & $0.0089$ & $0.0100$ & $0.0100$ & $0.0178$ & 540 \\
 Bitget & \databar{0.0043} & $0.0082$ & $-0.0255$ & $0.0090$ & $0.0097$ & $0.0103$ & $0.0175$ & 540 \\
-{\bf Contango} & \databar{0.0053} & $0.0023$ & $-0.0569$ & $0.0008$ & $0.0026$ & $0.0034$ & $0.0270$ & 540 \\
+DeFi Loan & \databar{0.0053} & $0.0023$ & $-0.0569$ & $0.0008$ & $0.0026$ & $0.0034$ & $0.0270$ & 540 \\
 Gate & \databar{0.0056} & $0.0073$ & $-0.0320$ & $0.0079$ & $0.0100$ & $0.0100$ & $0.0100$ & 540 \\
 Bybit & \databar{0.0063} & $0.0076$ & $-0.0546$ & $0.0100$ & $0.0100$ & $0.0100$ & $0.0200$ & 540 \\
 OKX & \databar{0.0175} & $0.0025$ & $-0.0915$ & $-0.0082$ & $0.0023$ & $0.0127$ & $0.0745$ & 540 \\
