--- a/tables/funding_rates_SNX.tex
+++ b/tables/funding_rates_SNX.tex
@@ -4,7 +4,7 @@
  & std & mean & min & 25\% & 50\% & 75\% & max & count \\
 \midrule
 Gate & \databar{0.0138} & $0.0052$ & $-0.1342$ & $0.0100$ & $0.0100$ & $0.0100$ & $0.0100$ & 540 \\
-{\bf Contango} & \databar{0.0169} & $0.0019$ & $-0.1276$ & $-0.0031$ & $0.0024$ & $0.0068$ & $0.0774$ & 540 \\
+DeFi Loan & \databar{0.0169} & $0.0019$ & $-0.1276$ & $-0.0031$ & $0.0024$ & $0.0068$ & $0.0774$ & 540 \\
 Binance & \databar{0.0195} & $-0.0027$ & $-0.1322$ & $-0.0092$ & $0.0064$ & $0.0100$ & $0.0233$ & 540 \\
 Bitget & \databar{0.0196} & $-0.0028$ & $-0.1325$ & $-0.0092$ & $0.0063$ & $0.0099$ & $0.0231$ & 540 \\
 Bybit & \databar{0.0199} & $-0.0012$ & $-0.1815$ & $-0.0070$ & $0.0100$ & $0.0100$ & $0.0524$ & 540 \\
