boldface contango name

--- a/tables/funding_rates_CRV.tex
+++ b/tables/funding_rates_CRV.tex
@@ -3,7 +3,7 @@
 \toprule
  & std & mean & min & 25\% & 50\% & 75\% & max & count \\
 \midrule
-DeFi Loan & \databar{0.0196} & $0.0049$ & $-0.1086$ & $-0.0029$ & $0.0020$ & $0.0110$ & $0.1188$ & 540 \\
+{\bf DeFi Loan} & \databar{0.0196} & $0.0049$ & $-0.1086$ & $-0.0029$ & $0.0020$ & $0.0110$ & $0.1188$ & 540 \\
 Bybit & \databar{0.0206} & $0.0027$ & $-0.2381$ & $0.0080$ & $0.0100$ & $0.0100$ & $0.0217$ & 540 \\
 Gate & \databar{0.0210} & $0.0046$ & $-0.3219$ & $0.0086$ & $0.0100$ & $0.0100$ & $0.0100$ & 540 \\
 Huobi & \databar{0.0212} & $0.0070$ & $-0.2391$ & $0.0100$ & $0.0100$ & $0.0100$ & $0.0100$ & 539 \\
