--- a/tables/funding_rates_UNI.tex
+++ b/tables/funding_rates_UNI.tex
@@ -4,7 +4,7 @@
  & std & mean & min & 25\% & 50\% & 75\% & max & count \\
 \midrule
 Huobi & \databar{0.0033} & $0.0095$ & $-0.0247$ & $0.0100$ & $0.0100$ & $0.0100$ & $0.0100$ & 540 \\
-DeFi Loan & \databar{0.0038} & $0.0041$ & $-0.0256$ & $0.0023$ & $0.0032$ & $0.0050$ & $0.0328$ & 540 \\
+{\bf DeFi Loan} & \databar{0.0038} & $0.0041$ & $-0.0256$ & $0.0023$ & $0.0032$ & $0.0050$ & $0.0328$ & 540 \\
 Gate & \databar{0.0055} & $0.0058$ & $-0.0211$ & $0.0027$ & $0.0088$ & $0.0100$ & $0.0100$ & 540 \\
 Binance & \databar{0.0057} & $0.0063$ & $-0.0192$ & $0.0044$ & $0.0100$ & $0.0100$ & $0.0100$ & 540 \\
 Bitget & \databar{0.0058} & $0.0064$ & $-0.0197$ & $0.0045$ & $0.0092$ & $0.0100$ & $0.0109$ & 540 \\
